# systemd_monitor

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.MD  COMPLETION_SUMMARY.md  GROK_JEEPNEY_ANALYSIS.md  INSTALL.md  INTEGRATION_TESTS_IMPLEMENTATION.md  INTEGRATION_TESTS_READY.md  INTEGRATION_TESTS_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  MANIFEST.in  MIGRATION_PLAN_JEEPNEY_PROMETHEUS.md  Makefile  PR2_ANALYSIS.md  PRE_COMMIT_HOOK.md  README.md  VERSIONING.md  config.json.example  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-windows.txt  requirements.txt  setup.py  systemd-monitor.service  test_after_tag.txt
.github/workflows/: ci.yml  integration-tests.yml
scripts/: setup-dev.sh
systemd_monitor/: __init__.py  config.py  dbus_shim.py  event_logger.py  prometheus_metrics.py  systemd_monitor.py
systemd_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  test_config.py  test_dbus_shim.py  test_prometheus_metrics.py  test_systemd_monitor.py
tests/integration/: ARCHITECTURE_CLARIFICATION.md  Dockerfile.alpine  Dockerfile.systemd  INTEGRATION_TEST_GUIDE.md  README.md  entrypoint_systemd.sh  run_all_tests.sh  test_alpine_install.sh  test_systemd_integration.py
tests/integration/test_services/: flaky.service  oneshot.service  restart.service  stable.service
tests/smoke/: __init__.py  test_basic.py  test_cli.py  test_installation.py
tests/unit/: test_dbus_shim.py  test_event_logger.py  test_prometheus_metrics.py  test_systemd_monitor.py
